fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body {
   font-family: "Lato", sans-serif;
   z-index: 1;
   margin: 20px;
+  overflow: hidden;
 }
 
 h1 {
